--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -48,7 +48,7 @@
               </ul>
             </div>
             <!-- tab-bar -->
-            <!-- Fav Products  -->
+            <!-- Fav Products \ Cart Products -->
             <div class="rounded-3xl" [ngSwitch]="selectedTabId">
               <div class="rounded-3xl" *ngSwitchCase="1">
                 <div class="relative overflow-x-auto rounded-3xl p-4 border-2 border-dashed border-gray-200">
@@ -89,166 +89,7 @@
                 </div>
               </div>
               <div class="" *ngSwitchCase="2">
-                <section class="border-2 border-dashed border-gray-200 rounded-3xl overflow-auto w-full p-4 sm:p-5">
-                  <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto">
-                    <table class="w-full text-sm text-left text-gray-500 ">
-                      <thead class=" text-xs text-gray-700 uppercase bg-gray-50 rounded-t-3xl">
-                        <tr>
-                          <th scope="col" class="px-6 py-3">
-                            <span class="sr-only">Image</span>
-                          </th>
-                          <th scope="col" class="px-6 py-3">
-                            Order Id
-                          </th>
-                          <th scope="col" class="px-6 py-3">
-                            Products List
-                          </th>
-                          <th scope="col" class="px-6 py-3">
-                            Qty
-                          </th>
-                          <th scope="col" class="px-6 py-3">
-                            Price
-                          </th>
-                          <th scope="col" class="px-6 py-3 mx-1">
-                            Action
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody class=" ">
-                        <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                          <td class="w-32 p-4">
-                            <img src="" alt="Apple Watch">
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            #asd123
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            Apple Watch , HeadPhone
-                          </td>
-                          <td class="px-6 py-4">
-                            <div class="flex items-center space-x-3">
-                              <div>
-                                <input type="number" id="first_product"
-                                  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                  placeholder="1" disabled>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            $599
-                          </td>
-                          <td class="px-6 py-4">
-                            <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                          </td>
-                        </tr>
-                        <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                          <td class="w-32 p-4">
-                            <img src="" alt="Apple Watch">
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            #asd123
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            Apple Watch , HeadPhone
-                          </td>
-                          <td class="px-6 py-4">
-                            <div class="flex items-center space-x-3">
-                              <div>
-                                <input type="number" id="first_product"
-                                  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                  placeholder="1" disabled>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            $599
-                          </td>
-                          <td class="px-6 py-4">
-                            <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                          </td>
-                        </tr>
-                        <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                          <td class="w-32 p-4">
-                            <img src="" alt="Apple Watch">
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            #asd123
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            Apple Watch , HeadPhone
-                          </td>
-                          <td class="px-6 py-4">
-                            <div class="flex items-center space-x-3">
-                              <div>
-                                <input type="number" id="first_product"
-                                  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                  placeholder="1" disabled>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            $599
-                          </td>
-                          <td class="px-6 py-4">
-                            <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                          </td>
-                        </tr>
-                        <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                          <td class="w-32 p-4">
-                            <img src="" alt="Apple Watch">
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            #asd123
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            Apple Watch , HeadPhone
-                          </td>
-                          <td class="px-6 py-4">
-                            <div class="flex items-center space-x-3">
-                              <div>
-                                <input type="number" id="first_product"
-                                  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                  placeholder="1" disabled>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            $599
-                          </td>
-                          <td class="px-6 py-4">
-                            <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                          </td>
-                        </tr>
-                        <tr class=" border-b :bg-gray-800 :border-gray-700 hover:bg-gray-50 :hover:bg-gray-600">
-                          <td class="w-32 p-4">
-                            <img src="" alt="Apple Watch">
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            #asd123
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            Apple Watch , HeadPhone
-                          </td>
-                          <td class="px-6 py-4">
-                            <div class="flex items-center space-x-3">
-                              <div>
-                                <input type="number" id="first_product"
-                                  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                  placeholder="1" disabled>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                            $599
-                          </td>
-                          <td class="px-6 py-4">
-                            <a class="font-medium text-red-600 :text-red-500 hover:underline mx-1">Cancel</a>
-                          </td>
-                        </tr>
-                      </tbody>
-                      </table>
-                      </div>
-                      </section>
+                      <app-cart-items *ngSwitchCase="2"></app-cart-items>
                       </div>
                       <div *ngSwitchDefault>default</div>
                       </div>
