--- a/src/app/shared/cart-items/cart-items.component.html
+++ b/src/app/shared/cart-items/cart-items.component.html
@@ -1,111 +1,85 @@
-<div id="dropdownCard"
-  class="z-20 absolute top-16 right-1 w-full  max-w-[30%] bg-white divide-y divide-gray-100 rounded-3xl shadow p-1"
-  aria-labelledby="dropdownCardButton">
-  <div class="block px-4 py-2 font-medium text-center text-gray-700 rounded-t-3 bg-gray-50 ">
-    السلة
-  </div>
-  <div class="divide-y divide-gray-100 max-h-96 overflow-scroll">
-    <div class="relative shadow-md max-h-96 overflow-scroll">
-      <table class="w-full text-sm text-center text-gray-500 ">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
-          <tr>
-            <th scope="col" class="px-6 py-3">
-              <span class="sr-only">Image</span>
-            </th>
-            <th scope="col" class="px-6 py-3">
-              المنتج
-            </th>
-            <th scope="col" class="px-6 py-3">
-              الكمية
-            </th>
-            <th scope="col" class="px-6 py-3">
-              السعر
-            </th>
-            <th scope="col" class="px-6 py-3">
-              الاجراء
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <ng-container *ngIf="cartItems.length > 0; else nocartItems">
-            <tr class=" border-b hover:bg-gray-50" *ngFor="let item of cartItems">
-              <td class="w-32 p-4">
-                <img [src]="item.product?.product_img" [alt]="item.product?.description">
-              </td>
-              <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                {{item.product?.name? item.product.name : 'N/A'}}
-              </td>
-              <td class="px-6 py-4">
-                <div class="flex items-center space-x-3">
-                  <button (click)="decreaseCartItemQty(item.id,item)"
-                    class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                    type="button">
-                    <span class="sr-only">Quantity button</span>
-                    <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                        clip-rule="evenodd">
-                      </path>
-                    </svg>
-                  </button>
-                  <div>
-                    <!-- <input type="number" id="first_product"
-                      class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                      [value]="item.quantity"
-                      [placeholder]="item.quantity" required> -->
-                    <label
-                      class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item.quantity}}</label>
-                  </div>
-                  <button (click)="increaseCartItemQty(item.id,item)"
-                    class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                    type="button">
-                    <span class="sr-only">Quantity button</span>
-                    <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd"
-                        d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                        clip-rule="evenodd"></path>
-                    </svg>
-                  </button>
-                </div>
-              </td>
-              <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                ${{item.product?.price ? item.product.price :"N/A"}}
-              </td>
-              <td class="px-6 py-4">
-                <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                      d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0">
+<div class="divide-y divide-gray-100 max-h-96 overflow-scroll">
+  <div class="relative shadow-md max-h-96 overflow-scroll">
+    <table class="w-full text-sm text-center text-gray-500 ">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+        <tr>
+          <th scope="col" class="px-6 py-3">
+            <span class="sr-only">Image</span>
+          </th>
+          <th scope="col" class="px-6 py-3">
+            المنتج
+          </th>
+          <th scope="col" class="px-6 py-3">
+            الكمية
+          </th>
+          <th scope="col" class="px-6 py-3">
+            السعر
+          </th>
+          <th scope="col" class="px-6 py-3">
+            الاجراء
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngIf="cartItems.length > 0; else nocartItems">
+          <tr class=" border-b hover:bg-gray-50" *ngFor="let item of cartItems">
+            <td class="w-32 p-4">
+              <img [src]="item.product?.product_img" [alt]="item.product?.description">
+            </td>
+            <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+              {{item.product?.name? item.product.name : 'N/A'}}
+            </td>
+            <td class="px-6 py-4">
+              <div class="flex items-center space-x-3">
+                <button (click)="decreaseCartItemQty(item.id,item)"
+                  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
+                  type="button">
+                  <span class="sr-only">Quantity button</span>
+                  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
                     </path>
-                  </svg>
-                </a>
-              </td>
-            </tr>
-          </ng-container>
-          <ng-template #nocartItems>
-            <tr>
-              <td></td>
-              <td></td>
-              <h3 class="font-semibold text-center">لا توجد عناصر بالسلة</h3>
-            </tr>
-          </ng-template>
-        </tbody>
-      </table>
-    </div>
+                    </svg>
+                    </button>
+                    <div>
+<label
+  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item.quantity}}</label>
+</div>
+<button (click)="increaseCartItemQty(item.id,item)"
+  class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
+  type="button">
+  <span class="sr-only">Quantity button</span>
+  <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+      clip-rule="evenodd"></path>
+  </svg>
+</button>
+</div>
+</td>
+<td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+  ${{item.product?.price ? item.product.price :"N/A"}}
+</td>
+<td class="px-6 py-4">
+  <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      <path stroke-linecap="round" stroke-linejoin="round"
+        d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0">
+      </path>
+    </svg>
+  </a>
+</td>
+</tr>
+</ng-container>
+<ng-template #nocartItems>
+  <tr>
+    <td></td>
+    <td></td>
+    <h3 class="font-semibold text-center">لا توجد عناصر بالسلة</h3>
+  </tr>
+</ng-template>
+</tbody>
+</table>
+</div>
 
-  </div>
-  <button [disabled]="cartItems.length<=0" routerLink="/checkout"
-    class="w-full py-2 text-sm font-medium text-center text-gray-900 rounded-b-lg bg-gray-50 hover:bg-gray-100 disabled:cursor-not-allowed disabled:bg-gray-100 disabled:text-gray-900">
-    <div class="inline-flex items-center text-gray-300 hover:text-gray-500">
-      <svg class="w-5 h-5 mr-1 " fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <path stroke-linecap="round" stroke-linejoin="round"
-          d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z">
-        </path>
-      </svg>
-      متابعة للشراء
-    </div>
-  </button>
 </div>
