--- a/src/app/shared/cart-items/cart-items.component.html
+++ b/src/app/shared/cart-items/cart-items.component.html
@@ -27,7 +27,7 @@
               <img [src]="item.product?.product_img" [alt]="item.product?.description">
             </td>
             <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-              {{item.product?.name? item.product.name : 'N/A'}}
+              {{item.product?.name? item.product?.name : 'N/A'}}
             </td>
             <td class="px-6 py-4">
               <div class="flex items-center space-x-3">
@@ -43,7 +43,7 @@
                     </button>
                     <div>
 <label
-  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item.quantity}}</label>
+  class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item?.quantity}}</label>
 </div>
 <button (click)="increaseCartItemQty(item.id,item)"
   class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
@@ -57,7 +57,7 @@
 </div>
 </td>
 <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-  ${{item.product?.price ? item.product.price :"N/A"}}
+  ${{item.product?.price ? item.product?.price :"N/A"}}
 </td>
 <td class="px-6 py-4">
   <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)">
