--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -13,22 +13,8 @@
       </div>
       <div class="grid grid-cols-3 gap-4 mb-4">
         <!-- animated blured divs -->
-        <div class="border-2 border-dashed rounded-3xl border-gray-300 md:max-w-2xl col-span-full sm:col-span-1">
+        <app-user-card></app-user-card>
 
-          <a class="flex flex-col items-center  border border-gray-200 rounded-3xl shadow md:flex-row h-full ">
-            <img class="object-cover w-full rounded-t-lg  md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src=""
-              alt="">
-            <div class="flex flex-col justify-between p-4 leading-normal text-left">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">User name</h5>
-              <p class=" font-normal text-gray-700 ">Email</p>
-              <h3 class=" text-xl  tracking-tight ">email@mail.com</h3>
-              <p class=" font-normal text-gray-700 ">Phone Number</p>
-              <h3 class=" text-xl  tracking-tight ">01150567130</h3>
-              <p class=" font-normal text-gray-700 ">Role</p>
-              <h3 class=" text-xl  tracking-tight ">Admin</h3>
-            </div>
-          </a>
-</div>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
             <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto ">
