--- a/src/app/pages/settings/components/home/home.component.html
+++ b/src/app/pages/settings/components/home/home.component.html
@@ -4,22 +4,17 @@
     <main class="p-4  h-auto pt-20">
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <div class="border-2 border-dashed rounded-3xl border-gray-300 md:max-w-2xl col-span-full sm:col-span-1">
-          <a class="flex flex-col items-center  border border-gray-200 rounded-3xl shadow md:flex-row h-full ">
-            <img class="object-cover w-full rounded-t-lg  md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
-              src="" alt="">
-            <div class="flex flex-col justify-between p-4 leading-normal text-left">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">User name</h5>
-              <p class=" font-normal text-gray-700 ">Email</p>
-              <h3 class=" text-xl  tracking-tight ">email@mail.com</h3>
-              <p class=" font-normal text-gray-700 ">Phone Number</p>
-              <h3 class=" text-xl  tracking-tight ">01150567130</h3>
-              <p class=" font-normal text-gray-700 ">Role</p>
-              <h3 class=" text-xl  tracking-tight ">Admin</h3>
-            </div>
-          </a>
-      
-        </div>
+          <!-- animated blured divs -->
+          <div
+            class="absolute top-[8%] left-[2%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+          </div>
+          <div
+            class="absolute top-[25%] right-[2%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+          </div>
+          <div
+            class="absolute bottom-[0%] right-[14%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+          </div>
+          <app-user-card></app-user-card>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="">
             <div class="max-w-2xl px-4 py-8 mx-auto lg:py-16">
