--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -3,13 +3,13 @@
   <div class="antialiased bg-gray-50 rounded-3xl">
     <main class="p-4  h-auto pt-20 relative">
       <div
-        class="absolute top-[0%] left-0 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+        class="absolute top-[2%] left-[2%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
       </div>
       <div
-        class="absolute top-[25%] right-0 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+        class="absolute top-[25%] right-[3%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
       </div>
       <div
-        class="absolute bottom-0 right-12 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+        class="absolute bottom-[0%] right-[2%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
       </div>
       <div class="grid grid-cols-3 gap-4 mb-4">
         <!-- animated blured divs -->
