--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -15,7 +15,7 @@
         <!-- animated blured divs -->
         <app-user-card></app-user-card>
 
-        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
+        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300 sm:col-span-2">
           <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
             <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto ">
               <table class="w-full text-sm text-center text-gray-500 ">
@@ -108,9 +108,9 @@
         </div>
         </div>
       <div class="border-2 border-dashed rounded-3xl border-gray-300 h-96 mb-4 p-5">
-        <h3 class="mb-4 text-lg font-semibold leading-none text-gray-900"> تفاصيل الدفع</h3>
+        <h3 class="mb-2 text-lg font-semibold leading-none text-gray-900"> تفاصيل الدفع</h3>
       <div class="flex items-center justify-between p-2">
-        <div class="w-1/2">
+        <div class="w-1/2 lg:w-full">
           <div class="grid gap-4 mb-4 sm:grid-cols-2">
       
             <div>
