--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,12 +1,12 @@
 <section class="container mx-auto my-20 relative">
   <div
-    class="absolute top-[0%] -right-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+    class="absolute top-[5%] right-[6%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
   </div>
   <div
-    class="absolute top-[25%] -right-8 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+    class="absolute top-[25%] right-[3%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
   </div>
   <div
-    class="absolute top-[50%] right-8 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    class="absolute top-[50%] right-[2%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
   </div>
   <div class="lg:grid lg:grid-cols-12 rounded-3xl ">
     <section class="header-img relative flex h-40 items-end lg:col-span-5 lg:h-full xl:col-span-6">
@@ -50,7 +50,7 @@
           </h1>
 
           <p class="mt-4 leading-relaxed text-gray-500">
-            made with ❤️ by <i class="hover:underline"> <a href="https://www.linkedin.com/in/saied-samaka-513a0518b"
+            made with ❤️ by <i class="hover:underline text-gray-200"> <a href="https://www.linkedin.com/in/saied-samaka-513a0518b"
                 target="_blank"> Saied Samaka </a></i>
           </p>
         </div>
@@ -65,7 +65,7 @@
             </svg>
             <p class="text-center font-extrabold"> مرحبا بعودتك </p>
             <p class="mt-4 leading-relaxed text-gray-500 text-center ">
-              made with ❤️ by <i class="hover:underline"> <a href="https://www.linkedin.com/in/saied-samaka-513a0518b"
+              made with ❤️ by <i class="hover:underline text-gray-200"> <a href="https://www.linkedin.com/in/saied-samaka-513a0518b"
                   target="_blank"> Saied Samaka
                 </a></i>
             </p>
