--- a/src/app/pages/auth/components/signup/signup.component.html
+++ b/src/app/pages/auth/components/signup/signup.component.html
@@ -1,12 +1,12 @@
 <section class="container m-auto mt-20 relative">
   <div
-    class="absolute top-[0%] -right-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+    class="absolute top-[4%] right-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl  animation-delay-2000">
   </div>
   <div
-    class="absolute top-[25%] -right-8 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+    class="absolute top-[25%] right-[4%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
   </div>
   <div
-    class="absolute top-[50%] right-8 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    class="absolute top-[50%] right-[9%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
   </div>
   <div class="lg:grid lg:grid-cols-12 rounded-3xl  ">
     <section class="header-img relative flex h-40 items-end lg:col-span-5 lg:h-full xl:col-span-6">
