--- a/src/app/shared/cart/cart.component.html
+++ b/src/app/shared/cart/cart.component.html
@@ -7,6 +7,7 @@
     </path>
   </svg>
   <div
+    *ngIf="cartItems.length "
     class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-blue-500 border-2 border-white rounded-full -top-2 -right-2 ">
     {{cartItems.length}}</div>
   </span>
