--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -14,96 +14,10 @@
       <div class="grid grid-cols-3 gap-4 mb-4">
         <!-- animated blured divs -->
         <app-user-card></app-user-card>
+        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
 
-        <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300 sm:col-span-2">
-          <section class="border-2 border-dashed border-gray-200 rounded-3xl w-full p-4 sm:p-5">
-            <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto ">
-              <table class="w-full text-sm text-center text-gray-500 ">
-                <thead class="text-lg text-gray-700 uppercase bg-gray-50 ">
-                  <tr>
-                    <th scope="col" class="px-6 py-3">
-                      <span class="sr-only">Image</span>
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      المنتج
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      الكمية
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      السعر
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                      الاجراء
-                    </th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <ng-container *ngIf="cartItems.length > 0 ; else noCartItems">
-                    <tr class=" border-b hover:bg-gray-50" *ngFor="let item of cartItems">
-                      <td class="w-32 p-4">
-                        <img [src]="item.product?.product_img" [alt]="item.product?.description">
-                      </td>
-                      <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                        {{item.product?.name? item.product.name : 'N/A'}}
-                      </td>
-                      <td class="px-6 py-4">
-                        <div class="flex items-center space-x-3">
-                          <button (click)="decreaseCartItemQty(item.id,item)"
-                            class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                            type="button">
-                            <span class="sr-only">Quantity button</span>
-                            <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                              xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
-                              </path>
-                            </svg>
-                          </button>
-                          <div>
-                            <!-- <input type="number" id="first_product"
-                                                      class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-                                [value]="item.quantity"
-                                [placeholder]="item.quantity" required> -->
-                            <label
-                              class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item.quantity}}</label>
-                          </div>
-                          <button (click)="increaseCartItemQty(item.id,item)"
-                            class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
-                            type="button">
-                            <span class="sr-only">Quantity button</span>
-                            <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                                clip-rule="evenodd"></path>
-                            </svg>
-                          </button>
-                        </div>
-                        </td>
-                        <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                          ${{item.product?.price ? item.product.price :"N/A"}}
-                        </td>
-                        <td class="px-6 py-4">
-                          <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)"><svg class="w-5 h-5" fill="none"
-                            stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0">
-                            </path>
-                          </svg></a>
-                        </td>
-                        </tr>
-                  </ng-container>
-                  <ng-template #noCartItems>
-                    <tr>
-                      <td></td>
-                      <td></td>
-                      <h3 class="text-center font-bold px-2 py-4 mx-auto my-4">لا يوجد عناصر بالسلة </h3>
-                      <td></td>
-
-                    </tr>
-                  </ng-template>
-                </tbody>
-              </table>
-            </div>
-          </section>
+        <!-- Cart Items -->
+        <app-cart-items></app-cart-items>
         </div>
       </div>
       <div class="border-2 border-dashed rounded-3xl border-gray-300  mb-4 p-5">
