--- a/src/app/shared/cart/cart.component.html
+++ b/src/app/shared/cart/cart.component.html
@@ -11,11 +11,11 @@
     class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-blue-500 border-2 border-white rounded-full -top-2 -right-2 ">
     {{cartItems.length}}</div>
   </span>
-  <div class="fixed z-20 inset-0 hidden bg-gray-50 bg-opacity-0 transition-opacity md:block" *ngIf="showCartDropdown"
+  <div class="fixed z-40 inset-0  bg-gray-50 bg-opacity-30 transition-opacity md:block" *ngIf="showCartDropdown"
     (click)="toggleCartDropDown()">
   </div>
    <div *ngIf="showCartDropdown" id="dropdownCard"
-    class="z-20 absolute top-16 right-1 w-full  max-w-[30%] bg-white divide-y divide-gray-100 rounded-3xl shadow p-1"
+    class="z-40 absolute top-16 right-1 w-full  max-w-[45%] bg-white divide-y divide-gray-100 rounded-3xl shadow p-1"
     aria-labelledby="dropdownCardButton">
     <div class="block px-4 py-2 font-medium text-center text-gray-700 rounded-t-3 bg-gray-50 ">
       السلة
