--- a/src/app/shared/toast/toast.component.html
+++ b/src/app/shared/toast/toast.component.html
@@ -1,7 +1,7 @@
 <div [ngSwitch]="toastType"
   class="fixed bottom-5 left-11 rounded-3xl flex items-center justify-center backdrop-blur-md ">
   <div *ngSwitchCase="'success'"
-    class="z-30 flex items-center justify-between gap-4 w-full  px-5 py-2 mb-4 border-2 border-dashed border-green-300 text-gray-500 rounded-3xl shadow-2xl "
+    class="z-30 flex items-center justify-between gap-4 w-full  px-5 py-2 mb-4 border-2  border-green-300 text-gray-500 rounded-3xl shadow-2xl "
   role="alert">
   <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-3xl "
     >
@@ -11,7 +11,7 @@
     </svg>
     <span class="sr-only">Check icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">عملية ناجحة</div>
+  <div class="ml-3 text-sm font-normal">{{toastMessage}} </div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-3xl focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
@@ -33,7 +33,7 @@
   </svg>
     <span class="sr-only">Error icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">عذرا , حدث خطأ</div>
+  <div class="ml-3 text-sm font-normal"> {{toastMessage}} </div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-3xl focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
@@ -57,7 +57,7 @@
     </svg>
     <span class="sr-only">Warning icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">تحذير عملية خطيرة</div>
+  <div class="ml-3 text-sm font-normal">{{toastMessage}} </div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-3xl focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
