--- a/src/app/pages/profile/views/fav-products/fav-products.component.html
+++ b/src/app/pages/profile/views/fav-products/fav-products.component.html
@@ -17,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr class=" border-b hover:bg-gray-50 ">
+      <tr class=" border-b hover:bg-gray-50 " *ngFor="let favItem of favProducts">
         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap :text-white">
           Apple MacBook Pro 17"
         </th>
