--- a/src/app/pages/profile/views/fav-products/fav-products.component.html
+++ b/src/app/pages/profile/views/fav-products/fav-products.component.html
@@ -30,6 +30,7 @@
           </td>
           <td class="px-6 py-4">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+              (click)="unfavProduct(favItem.id)"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
