--- a/src/app/pages/index/views/product-card/product-card.component.html
+++ b/src/app/pages/index/views/product-card/product-card.component.html
@@ -126,7 +126,7 @@
             <section aria-labelledby="options-heading" class="mt-10">
               <h3 id="options-heading" class="sr-only">Product options</h3>
 
-              <form>
+              <div>
                 <!-- Colors -->
                 <div>
                   <h4 class="text-sm font-medium text-gray-900">Color</h4>
@@ -289,7 +289,7 @@
                 <button (click)="postCartItem(product)"
                   class="add-to-cart-button mt-10 flex w-full items-center justify-center rounded-3xl border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">اضافة
                   الى السلة</button>
-              </form>
+              </div>
             </section>
           </div>
         </div>
