--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -88,7 +88,14 @@
       </h2>
       <div
         class=" grid grid-cols-1 gap-x-6 gap-y-10  w-full sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 xl:gap-x-8">
-        <app-product-card *ngFor="let product of productsToDisplay" [product]="product"></app-product-card>
+        <ng-container *ngIf="productsToDisplay.length > 0 else noproductsfound">
+          <app-product-card *ngFor="let product of productsToDisplay" [product]="product"></app-product-card>
+        </ng-container>
+        <ng-template #noproductsfound>
+          <div class="w-full col-span-full ">
+            <h3 class="font-semibold text-3xl text-center p-52">لا توجد نتائج متاحة</h3>
+          </div>
+        </ng-template>
         <!-- More products... -->
       </div>
     </div>
