--- a/src/app/pages/index/views/product-card/product-card.component.html
+++ b/src/app/pages/index/views/product-card/product-card.component.html
@@ -9,11 +9,11 @@
     </svg>
   </span>
   <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-3xl bg-gray-200 xl:aspect-h-8 xl:aspect-w-7"
-    [routerLink]="product.id">
+    [routerLink]="['/index',product.id]">
     <img [src]="product.product_img" [alt]="product.description"
       class="h-full w-full object-cover object-center hover:opacity-75">
   </div>
-  <div class="flex flex-row-reverse items-center justify-between" [routerLink]="product.id">
+  <div class="flex flex-row-reverse items-center justify-between" [routerLink]="['/index',product.id]">
     <h3 class="mt-4 text-sm font-semibold text-gray-700">{{product.name}}</h3>
     <p class="mt-4 text-lg font-medium text-gray-900">${{product.price}}</p>
   </div>
